# mooc_labs

./: README.md  pyproject.toml
lab1/: main.py  runtime-log.txt  student_info.json
lab1/.cache/41/: cache.db
