[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Adrià Cabello <adrian.cabello@alumni.esci.upf.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
altgraph = "0.17.4"
annotated-types = "0.7.0"
anyio = "4.4.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
cryptography = "43.0.1"
cython = "3.0.11"
diskcache = "5.6.3"
distro = "1.9.0"
docker = "7.1.0"
flaml = "2.2.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
idna = "3.8"
jiter = "0.5.0"
joblib = "1.4.2"
numpy = "2.1"
openai = "1.44.1"
packaging = "24.1"
pandas = "2.2.3"
pyarmor = "8.5.11"
pyarmor-cli-core = "6.5.3"
pycparser = "2.22"
pydantic = "2.9.1"
pydantic-core = "2.23.3"
pyinstaller-hooks-contrib = "2024.8"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
regex = "2024.7.24"
requests = "2.32.3"
scikit-learn = "1.5.2"
scipy = "1.14.1"
six = "1.16.0"
sniffio = "1.3.1"
termcolor = "2.4.0"
threadpoolctl = "3.5.0"
tiktoken = "0.7.0"
tqdm = "4.66.5"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
